--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ name: "하이커"
 description: "수요없는 공급"
 url: "https://xodbs97.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl: # the subpath of your site, e.g. "/blog"
-repository: "xodbs97/xodbs97.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository: # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo: # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title: "하이커의 안내서" # overrides the website title displayed in the masthead, use " " for no title
+masthead_title: # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs: true # true, false (default)
 words_per_minute: 200
 comments:
@@ -63,7 +63,7 @@ search: true # true, false (default)
 search_full_content: # true, false (default)
 search_provider: # lunr (default), algolia, google
 lunr:
-  search_within_pages: true # true, false (default)
+  search_within_pages: # true, false (default)
 algolia:
   application_id: # YOUR_APPLICATION_ID
   index_name: # YOUR_INDEX_NAME
